Set gradle option `includeSourceInfo` to true.

--- a/failures-gen-sample/build.gradle
+++ b/failures-gen-sample/build.gradle
@@ -41,6 +41,7 @@ protobuf {
             task.generateDescriptorSet = true
             task.descriptorSetOptions.path = "${projectDir}/build/descriptors/${task.sourceSet.name}.desc"
             task.descriptorSetOptions.includeImports = true
+            task.descriptorSetOptions.includeSourceInfo = true
         }
     }
 }
