--- a/validators-gen-sample/build.gradle
+++ b/validators-gen-sample/build.gradle
@@ -60,7 +60,8 @@ protobuf {
         all().each { task ->
             task.generateDescriptorSet = true
             task.descriptorSetOptions.path = "${projectDir}/build/descriptors/${task.sourceSet.name}.desc"
-            task.descriptorSetOptions.includeImports = false
+            task.descriptorSetOptions.includeImports = true
+            task.descriptorSetOptions.includeSourceInfo = true
         }
     }
 }
